Basic compilation support TODO: Optimize exception handling

--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
     "mitata": "latest",
     "typescript": "latest"
   },
-  "dependencies": { "@mapl/router": "^0.0.4" }
+  "dependencies": {
+    "@mapl/router": "^0.0.5"
+  }
 }
