--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mapl/app",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "A low overhead web framework",
   "keywords": [
     "fast",
@@ -17,6 +17,7 @@
   "types": "./index.d.ts",
   "scripts": {
     "build:test": "bun scripts/build.ts && bun test",
+    "bench": " bun scripts/bench.ts",
     "build:bench": "bun build:test && bun scripts/bench.ts",
     "build:publish": "bun build:test && bun scripts/publish.ts",
     "lint": "eslint ./src",
