--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript-eslint": "latest"
   },
   "dependencies": {
-    "@mapl/router": "^0.0.12"
+    "@mapl/compiler": "^0.0.6",
+    "@mapl/router": "^0.0.13"
   }
 }
