Zero-cost constants at runtime

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
     "stripInternal": true,
     "extendedDiagnostics": true
   },
-  "include": ["src"]
+  "include": ["src", "./globals.d.ts"]
 }
