--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mapl/app",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "description": "A low overhead web framework",
   "keywords": [
     "fast",
@@ -35,8 +35,8 @@
     "typescript": "latest",
     "typescript-eslint": "latest"
   },
-  "dependencies": {
-    "@mapl/compiler": "^0.0.6",
-    "@mapl/router": "^0.0.16"
+  "peerDependencies": {
+    "@mapl/compiler": ">=^0.0.6",
+    "@mapl/router": ">=^0.0.16"
   }
 }
