--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "typescript": "latest",
     "typescript-eslint": "latest"
   },
-  "peerDependencies": {
-    "@mapl/compiler": ">=^0.0.6",
-    "@mapl/router": ">=^0.0.16"
+  "dependencies": {
+    "@mapl/compiler": "^0.0.6",
+    "@mapl/router": "^0.0.16"
   }
 }
