--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mapl/app",
-  "version": "0.2.6",
+  "version": "0.3.0",
   "description": "A low overhead web framework",
   "keywords": [
     "fast",
@@ -22,7 +22,8 @@
     "build:bench": "bun build:test && bun scripts/bench.ts",
     "build:publish": "bun build:test && bun scripts/publish.ts",
     "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix"
+    "lint:fix": "eslint ./src --fix",
+    "measure": "bun tests/measure/index.ts"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "latest",
