--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mapl/app",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "A low overhead web framework",
   "keywords": [
     "fast",
@@ -39,5 +39,6 @@
   "dependencies": {
     "@mapl/compiler": "^0.2.2",
     "@mapl/router": "^0.2.4"
-  }
+  },
+  "sideEffects": false
 }
