--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "allowJs": true,
     // Bundler mode
     "moduleResolution": "NodeNext",
     "verbatimModuleSyntax": true,
@@ -27,6 +26,7 @@
     "declaration": true,
     "declarationDir": "lib",
     "emitDeclarationOnly": true,
+    "isolatedDeclarations": true,
     "stripInternal": true,
     "extendedDiagnostics": true
   },
