--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "esbuild": "^0.24.2",
     "eslint": "latest",
     "eslint-plugin-jsdoc": "latest",
-    "mitata": "latest",
+    "mitata": "^1.0.31",
     "prettier": "latest",
     "tsx": "latest",
     "typescript": "latest",
